some fixes to make things responsive on mobile

--- a/_sass/layout/_services.scss
+++ b/_sass/layout/_services.scss
@@ -11,7 +11,7 @@ section#services {
   }
   .d-block{
       width: 100%;
-      height: 25vw;
+      height: 40vh;
       object-fit: cover;
   }
 }  
